2007-10-11  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/c-i386.texi: Update which instruction's operands are
	swapped.

2007-10-11  Nick Clifton  <nickc@redhat.com>

	PR gas/5161
	* config/tc-ia64.c: Allow for translations of error and warning
	messages.
	* po/gas.pot: Regenerate.

	PR gas/5158
	* config/tc-h8300.c (tc_gen_reloc): Allow for translation of error
	message.
	* po/gas.pot: Regenerate.

	PR gas/5155
	* config/tc-msp430.c: Fix spelling typos.

2007-10-11  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo (Type): Fix typo: STT_FUNC not STT_FUNCTION.

2007-10-08  Maciej W. Rozycki  <macro@linux-mips.org>

	* config/tc-mips.c (AT): Rename to...
	(ATREG): ... this.
	(AT): New definition.
	(mips_set_options): Rename "noat" to "at"; change the type.
	(mips_opts): Update accordingly.
	(append_insn): Likewise.
	(macro_build_ldst_constoffset): Likewise.
	(load_address): Likewise.
	(macro, macro2): Likewise.
	(s_mipsset): Handle ".set at=REG".  Update handling of ".set at"
	and ".set noat".

2007-10-08  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo (Previous): Clarify explanation of the behaviour
	of this pseudo-op and add a couple of examples.

2007-10-08  Nick Clifton  <nickc@redhat.com>

	PR gas/5121 gas/5122 gas/5123
	* Makefile.am (CFILES): Add cgen.c
	(TARGET_CPU_CFILES): Add tc-iq2000.c, tc-maxq.c, tc-mt.c,
	tc-tic4x.c and xtensa-relax.c.
	(TARGET_CPU_HFILES): Add tc-iq2000.h, tc-maxq.h, tc-mt.h,
	tc-tic4x.h and xtensa-relax.h.
	(TARG_ENV_HFILES): Remove te-aux.h, te-delta.h, te-delt88.h,
	te-ic960.h, te-linux.h.  Add te-aix5.h, te-armeabi.h,
	te-freebsd.h, te-gnu.h, te-interix.h, te-vxworks.h.
	(CONFIG_ATOF_CFILES): New variable.
	(POTFILES): Add CONFIG_ATOF_CFILES to dependencies.  Fix typo with
	dependency upon TARG_ENV_HFILES.
	(DEPTC): Do not put "#include opcodes/<foo>-desc.h" into
	cgen-desc.h when foo-desc.h does not exit.
	Run make dep-am.
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.