@@ -1,0 +1,10 @@
+        .section sec1
+        .byte 1
+        .subsection 2
+        .byte 2
+        .pushsection sec2,1
+        .byte 3
+        .subsection 0
+        .byte 4
+        .popsection
+        .byte 5
