@@ -1,3 +1,10 @@
+2007-10-11  Nick Clifton  <nickc@redhat.com>
+
+	* gas/elf/elf.exp (run_elf_list_test): Run section6 test.
+	* gas/elf/section6.s: New file: Check behaviour of .pushsection
+	with a subsection argument.
+	* gas/elf/section6.d: New file: Expected disassembly.
+
 2007-10-08  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gas/i386/i386.exp: Run simd-suffix and x86-64-simd-suffix.
